# speech_detector

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: speech_detector.podspec
lib/: speech_detector.dart  speech_detector_bindings_generated.dart
lib/src/: fvad.dart  fvad_bindings_generated.dart  speech_detector.dart  util.dart
macos/: speech_detector.podspec
macos/Classes/: speech_detector.c
src/: CMakeLists.txt  speech_detector.c
